# Daiboo

./: .env.example  .gitignore  AGENTS.md  README.md  api.py  compose.redis.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_server.py
.codex/: config.toml
.github/workflows/: test.yml
context/: context_manager.py
data/: agent_checkpoints.db  agent_checkpoints.db-shm  agent_checkpoints.db-wal
database/: indexes.py  postgresql_database.py
entity/: agent_trace.py  rag_document.py
extensions/: __init__.py  llm_adapter.py
frontend/: app_utils.js  index.html
loggers/: diff_middleware.py  screen_logger.py
prompt/: system_prompt.py  task_prompt.py
rag/: document_rag_pgvector.py  hybrid_search_service.py  question_rag_pgvector.py
skills/browser-automation/: SKILL.md
skills/common-pitfalls/: SKILL.md
skills/daiboo-dev/: SKILL.md
skills/hcaptcha-solving/: SKILL.md
skills/naxussurf-dev/: SKILL.md
test/: conftest.py  test_agent_factory_cache.py  test_api_chat_history_routes.py  test_api_entrypoint.py  test_api_hardening.py  test_auth.py  test_chat_history.py  test_config.py  test_database_config.py  test_database_indexes.py  test_frontend_streaming_js.py  test_frontend_ui.py  test_hcaptcha_solver_classification.py  test_health.py  test_logging.py  test_mcp_client_config.py  test_my_browser_config.py  test_qwen_embeddings_config.py  test_qwen_embeddings_local.py  test_qwen_model_config.py  test_rag_distance.py  test_rag_redis_cache.py  test_rag_schema_init.py  test_redis_cache.py  test_skills.py  test_terminal_tools.py  test_upload_api.py  test_upload_paths.py  test_utils_lazy_exports.py  test_web_observe.py
test/manual/: README.md  epic_login_manual.py  hcaptcha_demo_manual.py  mcp_ref_smoke.py  middleware_logging_db_manual.py  playwright_agent_legacy.py  vl_analysis_tool_manual.py
tools/: __init__.py  capture_element_context_tool.py  hcaptcha_solver_tool.py  skill_tools.py  terminal_tools.py  vision_analysis_tool.py  web_observe_tool.py
tools/_simphtml/: __init__.py  observer.py
utils/: __init__.py  agent_factory.py  auth.py  chat_history.py  config.py  log_path.py  logging.py  mcp_client.py  my_browser.py  qwen_embeddings.py  qwen_model.py  redis_cache.py  skills.py  upload_paths.py
